Project/frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
      - name: project-volume
        persistentVolumeClaim:
          claimName: project-claim
      containers:
        - name: project
          image: FRONTEND_IMAGE
          resources:
            limits:
              cpu: "100m"
              memory: "512Mi"
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 10 
            httpGet:
              path: /ready
              port: 3000
          volumeMounts:
          - name: project-volume
            mountPath: /usr/src/app/files
            subPath: frontend
