Project/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: project 
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
